--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,7 @@
     <h2>Product List</h2>
     <app-product-list #productList></app-product-list>
 </div>
+
+
+<app-navbar></app-navbar>
+<app-main-content></app-main-content>
